# Copyright (C) 2025 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/test.gni")
import("//foundation/filemanagement/file_api/file_api.gni")

ani_file_environment_core = [
  "${src_path}/common/file_helper/fd_guard.cpp",
  "${src_path}/mod_environment/environment_core.cpp",
  "${src_path}/mod_fs/fs_utils.cpp",
]

ohos_unittest("ani_file_environment_test") {
  branch_protector_ret = "pac_ret"
  testonly = true

  module_out_path = "file_api/file_api"

  resource_config_file = "../resource/ohos_test.xml"

  include_dirs = [
    "${file_api_path}/interfaces/kits/js/src/common",
    "${file_api_path}/interfaces/kits/js/src/common/file_helper",
    "${file_api_path}/interfaces/kits/js/src/mod_fs",
    "${file_api_path}/interfaces/test/unittest/js/mod_environment/mock",
    "${src_path}/mod_environment",
    "${src_path}/mod_environment/ani",
  ]

  sources = [
    "mod_environment/environment_core_mock_test.cpp",
    "mod_environment/mock/accesstoken_kit_mock.cpp",
    "mod_environment/mock/ipc_skeleton_mock.cpp",
    "mod_environment/mock/parameter_mock.cpp",
  ]
  sources += ani_file_environment_core

  deps = [
    "${utils_path}/filemgmt_libfs:filemgmt_libfs",
    "${utils_path}/filemgmt_libhilog:filemgmt_libhilog",
  ]

  external_deps = [
    "access_token:libaccesstoken_sdk",
    "access_token:libtokenid_sdk",
    "c_utils:utils",
    "googletest:gmock_main",
    "googletest:gtest_main",
    "hilog:libhilog",
    "init:libbegetutil",
    "ipc:ipc_single",
    "libuv:uv",
    "openssl:libcrypto_shared",
    "os_account:os_account_innerkits",
    "runtime_core:ani",
    "runtime_core:libarkruntime",
  ]

  defines = [ "private=public" ]

  use_exceptions = true
}

ani_file_fs_core = [
  "${src_path}/common/file_api_debug.cpp",
  "${src_path}/common/file_fs_trace.cpp",
  "${src_path}/common/file_helper/fd_guard.cpp",
  "${src_path}/mod_fs/class_atomicfile/fs_atomicfile.cpp",
  "${src_path}/mod_fs/class_file/file_instantiator.cpp",
  "${src_path}/mod_fs/class_file/fs_file.cpp",
  "${src_path}/mod_fs/class_randomaccessfile/fs_randomaccessfile.cpp",
  "${src_path}/mod_fs/class_readeriterator/fs_reader_iterator.cpp",
  "${src_path}/mod_fs/class_stat/fs_stat.cpp",
  "${src_path}/mod_fs/class_stat/stat_instantiator.cpp",
  "${src_path}/mod_fs/class_stream/fs_stream.cpp",
  "${src_path}/mod_fs/class_stream/stream_instantiator.cpp",
  "${src_path}/mod_fs/class_tasksignal/fs_task_signal.cpp",
  "${src_path}/mod_fs/class_watcher/fs_file_watcher.cpp",
  "${src_path}/mod_fs/class_watcher/fs_watcher.cpp",
  "${src_path}/mod_fs/class_watcher/watcher_data_cache.cpp",
  "${src_path}/mod_fs/fs_utils.cpp",
  "${src_path}/mod_fs/properties/access_core.cpp",
  "${src_path}/mod_fs/properties/close_core.cpp",
  "${src_path}/mod_fs/properties/copy_core.cpp",
  "${src_path}/mod_fs/properties/copy_dir_core.cpp",
  "${src_path}/mod_fs/properties/copy_file_core.cpp",
  "${src_path}/mod_fs/properties/copy_listener/trans_listener_core.cpp",
  "${src_path}/mod_fs/properties/create_randomaccessfile_core.cpp",
  "${src_path}/mod_fs/properties/create_stream_core.cpp",
  "${src_path}/mod_fs/properties/dup_core.cpp",
  "${src_path}/mod_fs/properties/fdatasync_core.cpp",
  "${src_path}/mod_fs/properties/fdopen_stream_core.cpp",
  "${src_path}/mod_fs/properties/fsync_core.cpp",
  "${src_path}/mod_fs/properties/listfile_core.cpp",
  "${src_path}/mod_fs/properties/lseek_core.cpp",
  "${src_path}/mod_fs/properties/lstat_core.cpp",
  "${src_path}/mod_fs/properties/mkdir_core.cpp",
  "${src_path}/mod_fs/properties/mkdtemp_core.cpp",
  "${src_path}/mod_fs/properties/move_core.cpp",
  "${src_path}/mod_fs/properties/movedir_core.cpp",
  "${src_path}/mod_fs/properties/open_core.cpp",
  "${src_path}/mod_fs/properties/read_core.cpp",
  "${src_path}/mod_fs/properties/read_lines_core.cpp",
  "${src_path}/mod_fs/properties/read_text_core.cpp",
  "${src_path}/mod_fs/properties/rename_core.cpp",
  "${src_path}/mod_fs/properties/rmdir_core.cpp",
  "${src_path}/mod_fs/properties/stat_core.cpp",
  "${src_path}/mod_fs/properties/symlink_core.cpp",
  "${src_path}/mod_fs/properties/truncate_core.cpp",
  "${src_path}/mod_fs/properties/unlink_core.cpp",
  "${src_path}/mod_fs/properties/utimes_core.cpp",
  "${src_path}/mod_fs/properties/watcher_core.cpp",
  "${src_path}/mod_fs/properties/write_core.cpp",
  "${src_path}/mod_fs/properties/xattr_core.cpp",
]

ohos_unittest("ani_file_fs_mock_test") {
  branch_protector_ret = "pac_ret"
  testonly = true

  module_out_path = "file_api/file_api"

  resource_config_file = "../resource/ohos_test.xml"

  include_dirs = [
    "${file_api_path}/interfaces/kits/js/src/common",
    "${file_api_path}/interfaces/kits/js/src/common/file_helper",
    "${file_api_path}/interfaces/kits/js/src/mod_fs",
    "${file_api_path}/interfaces/kits/js/src/mod_fs/class_atomicfile",
    "${file_api_path}/interfaces/kits/js/src/mod_fs/class_file",
    "${file_api_path}/interfaces/kits/js/src/mod_fs/class_randomaccessfile",
    "${file_api_path}/interfaces/kits/js/src/mod_fs/class_readeriterator",
    "${file_api_path}/interfaces/kits/js/src/mod_fs/class_stat",
    "${file_api_path}/interfaces/kits/js/src/mod_fs/class_stream",
    "${file_api_path}/interfaces/kits/js/src/mod_fs/class_tasksignal",
    "${file_api_path}/interfaces/kits/js/src/mod_fs/class_watcher",
    "${file_api_path}/interfaces/kits/js/src/mod_fs/properties",
    "${file_api_path}/interfaces/kits/js/src/mod_fs/properties/copy_listener",
    "${file_api_path}/interfaces/test/unittest/common_mock",
    "${file_api_path}/interfaces/test/unittest/js/mod_fs/common",
    "${file_api_path}/interfaces/test/unittest/js/mod_fs/mock",
  ]

  sources = [
    "${file_api_path}/interfaces/test/unittest/common_mock/dfs_mock.cpp",
    "${file_api_path}/interfaces/test/unittest/common_mock/eventfd_mock.cpp",
    "${file_api_path}/interfaces/test/unittest/common_mock/inotify_mock.cpp",
    "${file_api_path}/interfaces/test/unittest/common_mock/poll_mock.cpp",
    "${file_api_path}/interfaces/test/unittest/common_mock/stdio_mock.cpp",
    "${file_api_path}/interfaces/test/unittest/common_mock/sys_file_mock.cpp",
    "${file_api_path}/interfaces/test/unittest/common_mock/sys_xattr_mock.cpp",
    "${file_api_path}/interfaces/test/unittest/common_mock/unistd_mock.cpp",
    "${file_api_path}/interfaces/test/unittest/common_mock/uv_err_mock.cpp",
    "${file_api_path}/interfaces/test/unittest/common_mock/uv_fs_mock.cpp",
    "mod_fs/class_file/fs_file_mock_test.cpp",
    "mod_fs/class_randomaccessfile/fs_randomaccessfile_mock_test.cpp",
    "mod_fs/class_readeriterator/fs_reader_iterator_mock_test.cpp",
    "mod_fs/class_stat/fs_stat_mock_test.cpp",
    "mod_fs/class_stream/fs_stream_mock_test.cpp",
    "mod_fs/class_watcher/fs_file_watcher_mock_test.cpp",
    "mod_fs/class_watcher/fs_watcher_mock_test.cpp",
    "mod_fs/properties/access_core_mock_test.cpp",
    "mod_fs/properties/close_core_mock_test.cpp",
    "mod_fs/properties/copy_core_mock_test.cpp",
    "mod_fs/properties/copy_file_core_mock_test.cpp",
    "mod_fs/properties/create_randomaccessfile_core_mock_test.cpp",
    "mod_fs/properties/dup_core_mock_test.cpp",
    "mod_fs/properties/fdatasync_core_mock_test.cpp",
    "mod_fs/properties/fsync_core_mock_test.cpp",
    "mod_fs/properties/lstat_core_mock_test.cpp",
    "mod_fs/properties/mkdir_core_mock_test.cpp",
    "mod_fs/properties/mkdtemp_core_mock_test.cpp",
    "mod_fs/properties/move_core_mock_test.cpp",
    "mod_fs/properties/open_core_mock_test.cpp",
    "mod_fs/properties/read_core_mock_test.cpp",
    "mod_fs/properties/read_lines_core_mock_test.cpp",
    "mod_fs/properties/rename_core_mock_test.cpp",
    "mod_fs/properties/stat_core_mock_test.cpp",
    "mod_fs/properties/symlink_core_mock_test.cpp",
    "mod_fs/properties/trans_listener_mock_test.cpp",
    "mod_fs/properties/truncate_core_mock_test.cpp",
    "mod_fs/properties/unlink_core_mock_test.cpp",
    "mod_fs/properties/utimes_core_mock_test.cpp",
    "mod_fs/properties/watcher_core_mock_test.cpp",
    "mod_fs/properties/write_core_mock_test.cpp",
    "mod_fs/properties/xattr_core_mock_test.cpp",
  ]
  sources += ani_file_fs_core

  deps = [
    "${file_api_path}/interfaces/kits/native:remote_uri_native",
    "${file_api_path}/interfaces/kits/native:task_signal_native",
    "${file_api_path}/interfaces/kits/rust:rust_file",
    "${utils_path}/filemgmt_libfs:filemgmt_libfs",
    "${utils_path}/filemgmt_libhilog:filemgmt_libhilog",
  ]

  external_deps = [
    "ability_runtime:ability_manager",
    "app_file_service:fileuri_native",
    "c_utils:utils",
    "data_share:datashare_common",
    "data_share:datashare_consumer",
    "dfs_service:distributed_file_daemon_kit_inner",
    "dfs_service:libdistributedfileutils",
    "googletest:gmock_main",
    "googletest:gtest_main",
    "hilog:libhilog",
    "hisysevent:libhisysevent",
    "ipc:ipc_single",
    "libuv:uv",
    "samgr:samgr_proxy",
  ]

  libs = [ "dl" ]

  defines = [ "private=public" ]

  use_exceptions = true
}

ohos_unittest("ani_file_fs_test") {
  branch_protector_ret = "pac_ret"
  testonly = true

  module_out_path = "file_api/file_api"

  resource_config_file = "../resource/ohos_test.xml"

  include_dirs = [
    "${file_api_path}/interfaces/kits/js/src/common",
    "${file_api_path}/interfaces/kits/js/src/common/file_helper",
    "${file_api_path}/interfaces/kits/js/src/mod_fs",
    "${file_api_path}/interfaces/kits/js/src/mod_fs/class_atomicfile",
    "${file_api_path}/interfaces/kits/js/src/mod_fs/class_file",
    "${file_api_path}/interfaces/kits/js/src/mod_fs/class_randomaccessfile",
    "${file_api_path}/interfaces/kits/js/src/mod_fs/class_readeriterator",
    "${file_api_path}/interfaces/kits/js/src/mod_fs/class_stat",
    "${file_api_path}/interfaces/kits/js/src/mod_fs/class_stream",
    "${file_api_path}/interfaces/kits/js/src/mod_fs/class_tasksignal",
    "${file_api_path}/interfaces/kits/js/src/mod_fs/class_watcher",
    "${file_api_path}/interfaces/kits/js/src/mod_fs/properties",
    "${file_api_path}/interfaces/kits/js/src/mod_fs/properties/copy_listener",
  ]

  sources = [
    "mod_fs/class_atomicfile/fs_atomicfile_test.cpp",
    "mod_fs/class_file/fs_file_test.cpp",
    "mod_fs/class_randomaccessfile/fs_randomaccessfile_test.cpp",
    "mod_fs/class_readeriterator/fs_reader_iterator_test.cpp",
    "mod_fs/class_stat/fs_stat_test.cpp",
    "mod_fs/class_stream/fs_stream_test.cpp",
    "mod_fs/class_tasksignal/fs_task_signal_test.cpp",
    "mod_fs/class_watcher/watcher_data_cache_test.cpp",
    "mod_fs/properties/access_core_test.cpp",
    "mod_fs/properties/close_core_test.cpp",
    "mod_fs/properties/copy_core_test.cpp",
    "mod_fs/properties/copy_dir_core_test.cpp",
    "mod_fs/properties/copy_file_core_test.cpp",
    "mod_fs/properties/create_randomaccessfile_core_test.cpp",
    "mod_fs/properties/create_stream_core_test.cpp",
    "mod_fs/properties/dup_core_test.cpp",
    "mod_fs/properties/fdopen_stream_core_test.cpp",
    "mod_fs/properties/listfile_core_test.cpp",
    "mod_fs/properties/lseek_core_test.cpp",
    "mod_fs/properties/lstat_core_test.cpp",
    "mod_fs/properties/move_core_test.cpp",
    "mod_fs/properties/movedir_core_test.cpp",
    "mod_fs/properties/open_core_test.cpp",
    "mod_fs/properties/read_core_test.cpp",
    "mod_fs/properties/read_lines_core_test.cpp",
    "mod_fs/properties/read_text_core_test.cpp",
    "mod_fs/properties/rename_core_test.cpp",
    "mod_fs/properties/rmdir_core_test.cpp",
    "mod_fs/properties/stat_core_test.cpp",
    "mod_fs/properties/trans_listener_test.cpp",
    "mod_fs/properties/truncate_core_test.cpp",
    "mod_fs/properties/unlink_core_test.cpp",
    "mod_fs/properties/utimes_core_test.cpp",
    "mod_fs/properties/write_core_test.cpp",
    "mod_fs/properties/xattr_core_test.cpp",
  ]
  sources += ani_file_fs_core

  deps = [
    "${file_api_path}/interfaces/kits/native:remote_uri_native",
    "${file_api_path}/interfaces/kits/native:task_signal_native",
    "${file_api_path}/interfaces/kits/rust:rust_file",
    "${utils_path}/filemgmt_libfs:filemgmt_libfs",
    "${utils_path}/filemgmt_libhilog:filemgmt_libhilog",
  ]

  external_deps = [
    "ability_runtime:ability_manager",
    "app_file_service:fileuri_native",
    "c_utils:utils",
    "data_share:datashare_common",
    "data_share:datashare_consumer",
    "dfs_service:distributed_file_daemon_kit_inner",
    "dfs_service:libdistributedfileutils",
    "googletest:gtest_main",
    "hilog:libhilog",
    "hisysevent:libhisysevent",
    "ipc:ipc_single",
    "libuv:uv",
    "samgr:samgr_proxy",
  ]

  defines = [ "private=public" ]

  use_exceptions = true
}

ani_file_hash_core = [
  "${src_path}/common/file_helper/fd_guard.cpp",
  "${src_path}/common/file_helper/hash_file.cpp",
  "${src_path}/mod_fs/fs_utils.cpp",
  "${src_path}/mod_hash/class_hashstream/hs_hashstream.cpp",
  "${src_path}/mod_hash/hash_core.cpp",
]

ohos_unittest("ani_file_hash_test") {
  module_out_path = "file_api/file_api"

  resource_config_file = "../resource/ohos_test.xml"

  sources = [ "mod_hash/hash_core_test.cpp" ]
  sources += ani_file_hash_core

  include_dirs = [
    "${file_api_path}/interfaces/kits/js/src/common",
    "${file_api_path}/interfaces/kits/js/src/common/file_helper",
    "${file_api_path}/interfaces/kits/js/src/mod_fs",
    "${file_api_path}/interfaces/kits/js/src/mod_hash",
  ]

  deps = [
    "${utils_path}/filemgmt_libfs:filemgmt_libfs",
    "${utils_path}/filemgmt_libhilog:filemgmt_libhilog",
  ]

  external_deps = [
    "ability_runtime:ability_manager",
    "c_utils:utils",
    "googletest:gmock_main",
    "googletest:gtest_main",
    "hilog:libhilog",
    "libuv:uv",
    "openssl:libcrypto_shared",
  ]

  defines = [ "private=public" ]

  use_exceptions = true
}

ani_file_securitylabel_core = [
  "${src_path}/common/file_helper/fd_guard.cpp",
  "${src_path}/mod_fs/fs_utils.cpp",
  "${src_path}/mod_securitylabel/securitylabel_core.cpp",
]

ohos_unittest("ani_file_securitylabel_test") {
  module_out_path = "file_api/file_api"

  resource_config_file = "../resource/ohos_test.xml"

  sources = [ "mod_securitylabel/securitylabel_core_test.cpp" ]
  sources += ani_file_securitylabel_core

  include_dirs = [
    "${file_api_path}/interfaces/kits/js/src/common",
    "${file_api_path}/interfaces/kits/js/src/common/file_helper",
    "${file_api_path}/interfaces/kits/js/src/mod_securitylabel",
  ]

  deps = [
    "${utils_path}/filemgmt_libfs:filemgmt_libfs",
    "${utils_path}/filemgmt_libhilog:filemgmt_libhilog",
  ]

  external_deps = [
    "ability_runtime:ability_manager",
    "c_utils:utils",
    "googletest:gmock_main",
    "googletest:gtest_main",
    "hilog:libhilog",
    "libuv:uv",
  ]

  defines = [ "private=public" ]

  use_exceptions = true
}

ani_file_statvfs_core = [
  "${src_path}/common/file_api_debug.cpp",
  "${src_path}/common/file_fs_trace.cpp",
  "${src_path}/common/file_helper/fd_guard.cpp",
  "${src_path}/mod_fs/fs_utils.cpp",
  "${src_path}/mod_statvfs/statvfs_core.cpp",
]

ohos_unittest("ani_file_statvfs_test") {
  module_out_path = "file_api/file_api"

  resource_config_file = "../resource/ohos_test.xml"

  sources = [ "mod_statvfs/statvfs_core_test.cpp" ]
  sources += ani_file_statvfs_core

  include_dirs = [
    "${file_api_path}/interfaces/kits/js/src/common",
    "${file_api_path}/interfaces/kits/js/src/common/file_helper",
    "${file_api_path}/interfaces/kits/js/src/mod_statvfs",
  ]

  deps = [
    "${utils_path}/filemgmt_libfs:filemgmt_libfs",
    "${utils_path}/filemgmt_libhilog:filemgmt_libhilog",
  ]

  external_deps = [
    "ability_runtime:ability_manager",
    "c_utils:utils",
    "googletest:gmock_main",
    "googletest:gtest_main",
    "hilog:libhilog",
    "libuv:uv",
  ]

  defines = [ "private=public" ]

  use_exceptions = true
}
