# Copyright (c) 2025 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/test.gni")
import("//foundation/filemanagement/file_api/file_api.gni")

ohos_unittest("movedir_test") {
  module_out_path = "file_api/file_api"

  sources = [
    "${file_api_path}/interfaces/kits/js/src/mod_fs/properties/movedir.cpp",
    "${file_api_path}/interfaces/test/unittest/movedir/mock/movedir_mock.cpp",
    "${file_api_path}/interfaces/test/unittest/movedir/movedir_mock_test.cpp",
  ]

  include_dirs = [
    "${file_api_path}/interfaces/kits/js/src/common/file_helper",
    "${file_api_path}/interfaces/kits/js/src/mod_fs",
    "${file_api_path}/interfaces/kits/js/src/mod_fs/properties",
    "${file_api_path}/interfaces/test/unittest/movedir/mock",
  ]

  use_exceptions = true

  deps = [
    "${file_api_path}/interfaces/kits/js:fs",
    "${utils_path}/filemgmt_libhilog:filemgmt_libhilog",
    "${utils_path}/filemgmt_libn:filemgmt_libn",
  ]

  external_deps = [
    "ability_base:zuri",
    "app_file_service:fileuri_native",
    "c_utils:utils",
    "c_utils:utilsbase",
    "googletest:gmock_main",
    "googletest:gtest_main",
    "hilog:libhilog",
    "ipc:ipc_core",
    "ipc:ipc_single",
    "napi:ace_napi",
  ]

  defines = [
    "private=public",
  ]
}