# Copyright (c) 2025 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/test.gni")
import("//foundation/filemanagement/file_api/file_api.gni")

ohos_unittest("napi_fs_test") {
  branch_protector_ret = "pac_ret"
  testonly = true

  module_out_path = "file_api/file_api"

  include_dirs = [
    "${file_api_path}/interfaces/kits/js/src/common",
    "${file_api_path}/interfaces/kits/js/src/common/file_helper",
    "${file_api_path}/interfaces/kits/js/src/mod_fs/",
    "${file_api_path}/interfaces/kits/js/src/mod_fs/properties",
    "${file_api_path}/interfaces/test/unittest/napi_js/mod_fs/mock",
    # "${utils_path}/common/include",
  ]

  sources = [
    "${file_api_path}/interfaces/kits/js/src/common/file_helper/fd_guard.cpp",
    "${file_api_path}/interfaces/kits/js/src/mod_fs/common_func.cpp",
    "${file_api_path}/interfaces/kits/js/src/mod_fs/properties/close.cpp",
    "mod_fs/mock/libn_mock.cpp",
    "mod_fs/mock/uv_fs_mock.cpp",
    "mod_fs/properties/close_mock_test.cpp",
  ]

  deps = [
    "${file_api_path}/interfaces/kits/js:fs",
    "${utils_path}/filemgmt_libhilog:filemgmt_libhilog",
    "${utils_path}/filemgmt_libn:filemgmt_libn",
  ]

  external_deps = [
    "ability_base:zuri",
    "ability_runtime:ability_manager",
    "access_token:libtokenid_sdk",
    "app_file_service:fileuri_native",
    "c_utils:utils",
    "dfs_service:distributed_file_daemon_kit_inner",
    "dfs_service:libdistributedfileutils",
    "googletest:gmock_main",
    "googletest:gtest_main",
    "hilog:libhilog",
    "ipc:ipc_core",
    "libuv:uv",
    "napi:ace_napi",
    "samgr:samgr_proxy",
  ]

  defines = [ "private=public" ]

  use_exceptions = true
}
